# python_uv_mkdocs_raw

./: LICENSE  README.md  demo_usage.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
demoprogram/: __init__.py  calc.py  utility.py
docs/: examples.md  index.md
docs/api/demoprogram/: calc.md  utility.md
docs/stylesheets/: extra.css
notebooks/: demo_usage.ipynb  setup_imports.py
